syntax = "proto3";

import "collections.proto";

package qdrant;
option csharp_namespace = "Qdrant.Client.Grpc";

message GetPeerTelemetryRequest {
    uint64 peer_id = 1; // The peer id to ask for telemetry
    uint32 details_level = 2; // The level of detail needed
}

message GetPeerTelemetryResponse {
    reserved 1; // id
    reserved 2; // app
    map<string, CollectionTelemetry> collections = 3; // Mapping from collection name to its telemetry
    ClusterTelemetry cluster = 4; // Telemetry about the cluster and peers
    reserved 5; // requests
    reserved 6; // memory
    reserved 7; // hardware
}

message CollectionTelemetry {
    string id = 1; // Name of the collection
    reserved 2; // init_time_ms
    reserved 3; // config
    reserved 4; // shards
    repeated ShardTransferTelemetry transfers = 5; // Shard transfers in progress
    repeated ReshardingTelemetry resharding = 6; // Resharding(s) in progress
    map<uint32, ShardCleanTelemetry> shard_clean_tasks = 7; // Tasks that clean points after completing a resharding sequence
}

message ShardTransferTelemetry {
    uint32 shard_id = 1; // Local shard id
    /*
    Target shard ID if different than source shard ID.
    Used exclusively with `ReshardStreamRecords` transfer method.
    */
    optional uint32 to_shard_id = 2;
    uint64 from = 3; // From peer id
    uint64 to = 4; // To peer id
    /*
    If `true` transfer is a synchronization of replicas;
    If `false` transfer is a moving of a shard from one peer to another.
    */
    bool sync = 5;
    ShardTransferMethod method = 6; // Method of transferring points
    string comment = 7; // Freeform string. Typically reports progress
}

message ReshardingTelemetry {
    uint32 shard_id = 1;
    uint64 peer_id = 2;
    optional ShardKey shard_key = 3;
    ReshardingDirection direction = 4;
    ReshardingStage stage = 5;
}

enum ReshardingStage {
    MIGRATING_POINTS = 0;
    READ_HASH_RING_COMMITTED = 1;
    WRITE_HASH_RING_COMMITTED = 2;
}

message ShardCleanTelemetry {
    oneof variant {
        ShardCleanStatusTelemetry status = 1;
        ShardCleanProgressTelemetry progress = 2;
        ShardCleanFailedTelemetry failed = 3;
    }
}

enum ShardCleanStatusTelemetry {
    STARTED = 0;
    CANCELLED = 1;
    DONE = 2;
}

message ShardCleanProgressTelemetry {
    uint64 deleted_points = 1;
}

message ShardCleanFailedTelemetry {
    string reason = 1;
}

message ClusterTelemetry {
    ClusterStatusTelemetry status = 1;
    reserved 2; // config
    reserved 3; // peers
    reserved 4; // peer_metadata
    reserved 5; // metadata
}

message ClusterStatusTelemetry {
    reserved 1; // number of peers
    uint64 term = 2;
    uint64 commit = 3;
    uint64 pending_operations = 4;
    StateRole role = 5;
    bool is_voter = 6;
    uint64 peer_id = 7;
    reserved 8; // consensus thread status
}

enum StateRole {
    FOLLOWER = 0;
    CANDIDATE = 1;
    LEADER = 2;
    PRE_CANDIDATE = 3;
}
